Fixed invisible delete button. Closed #67

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -407,6 +407,10 @@ body {
 }
 
 #appointment-tooltip {
+
+}
+
+.make-block {
     display: block;
     z-index: 500;
 }
